--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myOAuth</title>
 
-    <!--Reference platform.js library here-->
+    <!--Reference platform.js library here
+    651665047177-ur87ciofketjkphk7b1jm0g0sknau6gr.apps.googleusercontent.com-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!--Reference Client ID in meta tag here-->
+    <meta name="google-signin-client_id" content="651665047177-ur87ciofketjkphk7b1jm0g0sknau6gr.apps.googleusercontent.com">
 
 
     <!--jquery-->
